[gd_scene load_steps=7 format=3 uid="uid://dtuk3xi0s4h4w"]

[ext_resource type="Script" uid="uid://dhx7ankg0ylpq" path="res://Simon/Scripts/game_hud.gd" id="1_36u2n"]
[ext_resource type="Script" uid="uid://h1phj0pgaikn" path="res://Simon/Scripts/time_manager.gd" id="1_j82se"]
[ext_resource type="FontFile" uid="uid://dwx06i8t0jm4b" path="res://Simon/Assets/mago3.ttf" id="8_dxkmp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68k5q"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_chbrc"]
default_font = ExtResource("8_dxkmp")
default_font_size = 32

[sub_resource type="Theme" id="Theme_e00pi"]

[node name="GameHUD" type="Control"]
custom_minimum_size = Vector2(640, 55)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 50.0
script = ExtResource("1_36u2n")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_68k5q")

[node name="Rows" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_chbrc")
theme_override_constants/separation = 5

[node name="Row1" type="Control" parent="PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="LivesHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -9.0
offset_right = 72.0
offset_bottom = 9.0
grow_vertical = 2
size_flags_horizontal = 8
theme = SubResource("Theme_e00pi")

[node name="LivesLbl" type="Label" parent="PanelContainer/Rows/Row1/LivesHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Lives:"

[node name="LivesData" type="Label" parent="PanelContainer/Rows/Row1/LivesHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "3"

[node name="TimeHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -11.5
offset_right = 51.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
script = ExtResource("1_j82se")

[node name="TimeLbl" type="Label" parent="PanelContainer/Rows/Row1/TimeHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Time:"

[node name="TimeData" type="Label" parent="PanelContainer/Rows/Row1/TimeHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "00:00"

[node name="Timer" type="Timer" parent="PanelContainer/Rows/Row1/TimeHBox"]
autostart = true

[node name="ScoreHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8

[node name="ScoreLbl" type="Label" parent="PanelContainer/Rows/Row1/ScoreHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Score:"

[node name="ScoreData" type="Label" parent="PanelContainer/Rows/Row1/ScoreHBox"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "00000000"

[node name="Row2" type="HBoxContainer" parent="PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PromptData" type="RichTextLabel" parent="PanelContainer/Rows/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 3
bbcode_enabled = true
text = "You have been such a [color=#00beef]good[/color] test subject!"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="PanelContainer/Rows/Row1/TimeHBox/Timer" to="PanelContainer/Rows/Row1/TimeHBox" method="_on_timer_timeout"]
